# ai-product-launch-intelligence-agent

./: .gitignore  README.md  analysis_output.md
backend/: .dockerignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  run_output.txt
backend/agent/: agent_output.txt  main.py
backend/agent/model/: initialize_model.py
backend/agent/nodes/: launch_metrics_specialist_agent.py  market_sentiment_specialist_agent.py  product_launch_analyst_agent.py  supervisor_agent.py
backend/agent/state_schema/: agent_state.py
backend/agent/tools/: tavily_search.py
backend/agent/workflow/: build_workflow.py
backend/alembic/: env.py
backend/alembic/versions/: 313ea490fe85_inital_migration.py  f3a315695bd4_initial_migration.py
backend/api/: main.py
backend/api/access_tokens/: create_access_tokens.py
backend/api/api_key_encryption/: encrypt_decrypt.py
backend/api/database/: db_connection.py
backend/api/models/: user_data.py
backend/api/password_hash/: hash_password.py  verify_password.py
backend/api/routers/: agent_run_routes.py  user_routes.py
backend/api/schemas/: agent_data.py  user_data.py
backend/api/services/: agent_services.py  user_services.py
backend/api/signup/: main.py
backend/database/: db.py  models.py
backend/migrations/: env.py
backend/migrations/versions/: 75b8d5516fd0_create_user_and_agent_tables.py
docs/: frontend_prompt.txt  prompts_used.txt  🚀 AI Product Launch Intelligence Agent 34fc1cfa959c8192b256c90436b5ac49.html
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
(+72 files in other folders)
