[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary,pool]>=3.3.4",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
